<resources>
    <string name="app_name">Posad TIC</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_started">LETS GET STARTED</string>
    <string name="attractions">Attractions</string>
    <string name="hotels">Popular Hotels</string>
    <string name="restaurants">Cafe and Restaurants</string>
    <string name="events">Events</string>
    <string name="shops">Shops</string>
    <string name="help">Help to tourists</string>
    <string name="souvenirs">Where to buy souvenirs</string>
    <string name="view_restaurants">  Restaurants  </string>
    <string name="view_cafe">  Cafe  </string>
    <string name="view_bars">  Bars and Pubs  </string>
    <string name="view_lavra">  Lavra  </string>
    <string name="view_museums">  Museums  </string>
    <string name="view_religion">  Religion  </string>
    <string name="view_walking">  Places for walking  </string>
    <string name="tic_name">Tourist Information Center "Hospitable Sergiev Posad"</string>
    <string name="tic_name_for_dashboard">Tourist assistance</string>
    <string name="tic_description">The tourist information center "Hospitable Sergiev Posad" is an opportunity to find the most complete information about the tourist sites of the Sergiev Posad urban district in one place. Convenient service for residents and guests of the city who want to spend time interestingly and comfortably in our area. The aim of the TIC is to create and develop a convenient tourist information service aimed at residents and guests of the city, as well as to popularize natural and cultural heritage sites.
        \nThe main activities of the TIC are:
        \n- informing residents and guests of the city about tourist routes, attractions and opportunities of the district;
        \n- accommodation in hotels and hotels;
        \n- development of the route, based on the individual preferences of the tourist, age and budget;
        \n- organization of transfer, car rental;
        \n- providing the tourist with the opportunity to purchase and one-time payment at the TIC of tickets to visit the selected objects;
        \n- information support and creation of favorable conditions for individual and group tourists during their stay in our district;
        \n- conducting marketing and statistical research of the tourism market;
        \n- organizing and conducting promotions and other events aimed at promoting the tourist product;
        \n- acting as a single tourist operator of the urban district of Sergiev Posad.</string>
    <string name="tic_phone_number"><a href="tel:+79262083308">+79262083308</a></string>
    <string name="tic_map_link"><a href="https://goo.gl/maps/2obkmGesEPnM2PRG6">st. Karl Marx, 7</a></string>
    <string name="tic_work_time">We-Su, 10:00–19:00</string>
    <string name="tic_link">tic-sp@mail.ru</string>
    <string name="weather">Weather</string>
    <string name="see_more">see more</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <string name="featured_locations">All featured Location</string>
    <string name="featured_locations_description">All the locations that are featured</string>
    <string name="most_viewed_locations">Most viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="title_activity_hotel_view">HotelView</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hotel_name_1">Posadskiy Hotel</string>
    <string name="hotel_distance_1">800 m from center</string>
    <string name="hotel_description_1">This hotel in the heart of Sergiev Posad is located a 5-minute walk from Troitse-Sergiev Lavra. The property was renovated in 2014. Free WiFi is available throughout the entire hotel.\n
        All rooms at the Posadskiy are air-conditioned and have a flat-screen TV, tea coffee maker, and a private bathroom with a hairdryer and free toiletries. Suites have a spacious seating area with couches and a coffee table.\nA continental breakfast is served every morning.\nWe speak your language!</string>
    <string name="hotel_link1"><a href="https://hotel-sposad.ru">hotel-sposad.ru</a></string>
    <string name="hotel_phone_number1"> <a href="tel:+74965424226">+7 496 542-42-26</a></string>
    <string name="hotel_map_link1"><a href="https://goo.gl/maps/HuV91oYvPLDEN1Ax5">пр. Красной Армии, 171, Сергиев Посад, Московская обл., 141310</a></string>
    <string name="hotel_2_name">Gosudarevs House Hotel</string>
    <string name="hotel_2_distance">350 m from center</string>
    <string name="hotel_2_description">Located in Sergiyev Posad, 1.2 mi from Trinity-Sergius Lavra, Gosudarev House Hotel complex Imperial Village provides accommodations with a restaurant, free private parking, a bar.</string>
    <string name="hotel_2_link"><a href="https://www.imperial-village.ru">imperial-village.ru</a></string>
    <string name="hotel_2_phone_number"> <a href="tel:+74959951996">+7 495 995 19 96</a></string>
    <string name="hotel_2_map_link"><a href="https://goo.gl/maps/8EE96tCgr64ncTY47">Ulitsa Mitkina, 14/2, Sergiyev Posad, Moscow Oblast, 141302</a></string>
    <string name="hotel_3_name">Barskiye Polati Hotel</string>
    <string name="hotel_3_distance">600 m from center</string>
    <string name="hotel_3_description">Located in Sergiyev Posad, Barskiye Polati Hotel offers free WiFi and free private pakring. \n
        All rooms are air conditioned and come with a flat-screen TV, fridge and electric kettle. Junior suites feature a seating area. The private bathroom includes free toiletries, slippers and a hairdryer. \n
        Guests can dine in local cafes that are within a 7-minute walk from the hotel. \n
        Troitse Sergieva Lavra Church is a 5-minute walk away. \n
        Barskiye Polati Hotel is 0.9 mi from Sergiyev Posad Train Station and 50 mi from Sheremetyevo International Airport. \n
        This is our guests favorite part of Sergiyev Posad, according to independent reviews. \n
        Couples in particular like the location – they rated it 9.3 for a two-person trip. \n
        We speak your language!</string>
    <string name="hotel_3_link"><a href="http://www.barskie-polati.ru/">barskie-polati.ru</a></string>
    <string name="hotel_3_phone_number"> <a href="tel:+74959267365">+7 495 926 73 65</a></string>
    <string name="hotel_3_map_link"><a href="https://goo.gl/maps/W5ZEQLptKvU85bzP9">Ulitsa Valovaya, 2, Sergiyev Posad, Moscow Oblast, 141302</a></string>
    <string name="hotel_4_name">The Old Lavry Hotel</string>
    <string name="hotel_4_distance">300 m from center</string>
    <string name="hotel_4_description">The old hotel Lavra is located in a 19th century building in the very center of Sergiev Posad. The hotel is located 50 m from the main attraction of the monastery of the Holy Trinity St. Sergius Lavra.\nFree WiFi and free parking are available.\nThe rooms at the Old Hotel Lavra are decorated in a classic style and equipped with wooden furniture. The windows overlook the Trinity-Sergius Lavra, Red Army Avenue or the courtyard of the hotel.\nAll rooms are equipped with a refrigerator, kettle, TV and telephone. A hairdryer and toiletries are provided in each room.\nThere are 2 restaurants - Refectory Chamber and Guest House at the hotel. The restaurants serve local cuisine. The menu includes both lean and light meals. The reception is open 24 hours a day.\nThere is a bus stop right in front of the hotel with connections to other areas of Sergiev Posad. Sergiev Posad Train Station and Central Bus Station can be reached on foot in 10 minutes, or 2 stops by public transport.\nCouples in particular like the location – they rated it 9.9 for a two-person trip.</string>
    <string name="hotel_4_link"><a href="http://lavrahotel.ru/">lavrahotel.ru</a></string>
    <string name="hotel_4_phone_number"> <a href="tel:+74965499000">+7 496 549 90 00</a></string>
    <string name="hotel_4_map_link"><a href="https://goo.gl/maps/kmbVSdCRpevx6abQ7">Prospekt Krasnoy Armii, 133, Sergiyev Posad, Moscow Oblast, 141315</a></string>
    <string name="hotel_5_name">Tsentralnaya Hotel</string>
    <string name="hotel_5_distance">300 m from center</string>
    <string name="hotel_5_description">Located in the historical part of Sergiyev Posad, just a 5-minute walk Trinity Sergius Lavra Monastery, Tsentralnaya Hotel features air-conditioned rooms, free Wi-Fi and a free car park. Belyy Pond is 500 m away.\nThe classic-style rooms offer a fridge, kettle and TV with cable channels. The private bathroom is equipped with a shower and free toiletries.\nContinental breakfast is served every day. A number of cafes, bars and restaurants is a short walk away.\nBoth Sergiyev Posad Train Station and Bus Station are 1 km away. The nearest bus stop is a 5-minute walk away.</string>
    <string name="hotel_5_link">https://spcentral.ru/<a href="spcentral.ru"></a></string>
    <string name="hotel_5_phone_number"><a href="tel:+74965478088">+7 496 547 80 88</a></string>
    <string name="hotel_5_map_link"><a href="https://g.page/SPcentral?share">Ovrazhnyy Pereulok, 2A, Sergiyev Posad, Moscow Oblast, 141300</a></string>
    <string name="hotel_6_name">Krasnaya Gora Boutique Hotel</string>
    <string name="hotel_6_distance">550 m from center</string>
    <string name="hotel_6_description">Situated in Sergiyev Posad and with Trinity-Sergius Lavra reachable within 600 metres, Krasnaya Gora Boutique Hotel features express check-in and check-out, allergy-free rooms, a bar, free WiFi throughout the property and a shared lounge. The property has a garden, as well as a terrace. The accommodation provides evening entertainment and a concierge service.
        \nAt the hotel, rooms are equipped with a wardrobe and a flat-screen TV. The rooms at Krasnaya Gora Boutique Hotel have air conditioning and a desk.
        \nA Full English/Irish breakfast is available each morning at the accommodation.
        \nGuests at Krasnaya Gora Boutique Hotel will be able to enjoy activities in and around Sergiyev Posad, like hiking.</string>
    <string name="hotel_6_link"><a href="https://mygreenway.com/shop/?gw=pPgIbNm1Ab">mygreenway.com</a></string>
    <string name="hotel_43_name">Esquire House</string>
    <string name="hotel_43_distance">2.2 km from center</string>
    <string name="hotel_43_description">Set in Sergiyev Posad, Moscow region region, Esquire House is situated 3.2 km from Trinity-Sergius Lavra. The accommodation offers a 24-hour front desk as well as free WiFi throughout the property.
        \nAt the guest house, all rooms are equipped with a desk and a flat-screen TV.
        \nGuests at Esquire House can enjoy a continental breakfast.</string>
    <string name="hotel_43_link"><a href="http://esquirehouse.ru/">esquirehouse.ru</a></string>
    <string name="hotel_43_phone_number"> <a href="tel:+79261690800">+7 926 169 08 00</a></string>
    <string name="hotel_43_map_link"><a href="https://goo.gl/maps/XBnD5Cx698KvS6yR8">Ulitsa Glinki, 9, Sergiyev Posad, Moscow Oblast, 141303</a></string>
    <string name="food_3_name">Landau Cafe</string>
    <string name="food_3_work_time">10:00-23:00</string>
    <string name="food_4_name">Pirosmani Cafe</string>
    <string name="food_4_work_time">11:00–00:00</string>
    <string name="food_17_name">Cafe Eclair</string>
    <string name="food_17_work_time">09:00–21:00</string>
    <string name="food_30_name">Julie Cafe</string>
    <string name="food_30_work_time">11:00–21:00</string>
    <string name="food_31_name">CoffeeBar Popeye</string>
    <string name="food_31_work_time">06:00–21:00</string>
</resources>