<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hotels.HotelView">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--Categories-->
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    >
                    <androidx.cardview.widget.CardView
                        android:id="@+id/restaurants_button"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="8dp"
                        app:cardBackgroundColor="@color/blue"
                        >
                        <TextView
                            android:layout_marginHorizontal="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/view_restaurants"
                            android:fontFamily="sans-serif"
                            android:includeFontPadding="false"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            />
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cafe_button"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="8dp"
                        app:cardBackgroundColor="@color/yellow"
                        android:layout_marginLeft="7dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/view_cafe"
                            android:fontFamily="sans-serif"
                            android:includeFontPadding="false"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            />
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/bars_button"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="8dp"
                        app:cardBackgroundColor="@color/blue"
                        android:layout_marginLeft="7dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:text="@string/view_bars"
                            android:fontFamily="sans-serif"
                            android:includeFontPadding="false"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </HorizontalScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="230dp"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    >
                    <LinearLayout
                        android:id="@+id/food_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:background="@android:drawable/list_selector_background">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:src="@drawable/food_3"
                            android:scaleType="centerCrop"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/food_3_name"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food_3_work_time"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="230dp"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    android:layout_marginHorizontal="10dp"
                    >
                    <LinearLayout
                        android:id="@+id/food_4"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:background="@android:drawable/list_selector_background">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:src="@drawable/food_4"
                            android:scaleType="centerCrop"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/food_4_name"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food_4_work_time"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="230dp"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    >
                    <LinearLayout
                        android:id="@+id/food_17"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:background="@android:drawable/list_selector_background">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:src="@drawable/food_17"
                            android:scaleType="centerCrop"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/food_17_name"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food_17_work_time"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="230dp"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    android:layout_marginHorizontal="10dp"
                    >
                    <LinearLayout
                        android:id="@+id/food_30"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:background="@android:drawable/list_selector_background">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:src="@drawable/food_30"
                            android:scaleType="centerCrop"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/food_30_name"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food_30_work_time"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="230dp"
                    app:cardBackgroundColor="@color/blue"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    >
                    <LinearLayout
                        android:id="@+id/food_31"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:background="@android:drawable/list_selector_background">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:src="@drawable/food_31"
                            android:scaleType="centerCrop"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:text="@string/food_31_name"
                            android:textSize="20sp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/food_31_work_time"
                            android:textColor="@color/white"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>