<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                app:cardCornerRadius="30dp"
                android:layout_marginTop="-30dp"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:src="@drawable/hotel_43"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center|end"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_43_name"
                android:fontFamily="sans-serif"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:layout_marginHorizontal="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel_43_distance"
                    android:textColor="@color/black"
                    />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_ethernet"
                            />
                        <TextView
                            android:id="@+id/hotel_map_link43"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel_43_link"
                            android:layout_marginLeft="10dp"
                            android:textSize="15dp"
                            android:textColor="@color/white"
                            android:textColorLink="@color/white"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_phone"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel_43_phone_number"
                            android:id="@+id/phone_number_hotel43"
                            android:layout_marginLeft="10dp"
                            android:textSize="15dp"
                            android:linksClickable="true"
                            android:textColorLink="@color/white"
                            android:autoLink="all"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_location"/>
                        <TextView
                            android:id="@+id/link_hotel43"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_marginLeft="10dp"
                            android:textSize="15dp"
                            android:text="@string/hotel_43_map_link"
                            android:textColorLink="@color/white"
                            />


                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_43_description"
                android:fontFamily="sans-serif"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:textColor="@color/white"
                android:text="Link to Booking.com"
                android:onClick="linkButton"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                />
        </LinearLayout>



    </ScrollView>
</LinearLayout>